--- a/ABM.Paie.Formation/Pages/Contact.razor
+++ b/ABM.Paie.Formation/Pages/Contact.razor
@@ -11,7 +11,8 @@
 <h2 id="reserver">Réserver un créneau horaire</h2>
 
 <Paragraph>
-    Afin d'organiser au mieux mes journées de travail entre formation et ingénierie de formation, j'ai bloqué des créneaux dédiés pour un échange individuel, complet et personnalisé avec vous.
+    Afin d'organiser au mieux mes journées de travail entre formation et ingénierie de formation, 
+    j'ai bloqué des créneaux dédiés pour un échange individuel, complet et personnalisé avec vous.
     <br />
     <NavTemplate Model=@new(UriProvider.Get(AbmUri.RendezVous), new(IconPath.CalendarMonth)) />
 </Paragraph>
@@ -33,11 +34,10 @@
 </Paragraph>
 
 <Paragraph>
-    <b>Privilégiez la prise de rendez-vous en ligne,</b> nous serons sûrs de consacrer un temps dédié à notre échange (15 ou 30 minutes selon vos préférences et besoins).
+    <b>Privilégiez la prise de rendez-vous en ligne,</b> 
+    nous serons sûrs de consacrer un temps dédié à notre échange (15 ou 30 minutes selon vos préférences et besoins).
 </Paragraph>
 
 <h2 id="pages-officielles">Mes pages officielles</h2>
 
-@code {
-
-}
+@code { }
