--- a/Common/Components/Paragraph.razor
+++ b/Common/Components/Paragraph.razor
@@ -1,5 +1,7 @@
 ﻿@inherits BaseComponent
 
+@{ _ = _builder.Append("common__paragraph"); }
+
 <p class=@_builder>
     @ChildContent
 </p>
@@ -7,10 +9,4 @@
 @code {
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
-
-    protected override void OnInitialized()
-    {
-        _ = _builder.Append("common__paragraph");
-        base.OnInitialized();
-    }
 }
