--- a/ABM.Paie.Formation/Layout/MainLayout.razor
+++ b/ABM.Paie.Formation/Layout/MainLayout.razor
@@ -1,20 +1,22 @@
 ﻿@using ABM.Paie.Formation.Enumerations
 @using ABM.Paie.Formation.Services
 @using Common.Components
+@using Common.Components.Operations
 @using Common.Components.Templates
 @using Common.Enumerations
 @using Common.Extensions
-@using Common.Models
+@using Common.Models.Operations
+@using Common.Models.Uris
 @inherits LayoutComponentBase
 @inject IUriProvider UriProvider
 @inject NavigationManager NavigationManager
 
 @{
-    var accueil = UriProvider.Get<UriImageModel>(AbmUri.Accueil);
-    var linkedin = UriProvider.Get<UriImageModel>(AbmUri.LinkedIn);
+    var accueil = UriProvider.Get<ImageUriModel>(AbmUri.Accueil);
+    var linkedin = new OperationModel(UriProvider.Get<ImageUriModel>(AbmUri.LinkedIn), new(Class: "white filled"));
 
-    var formations = GetMenu([ AbmUri.Formations, AbmUri.FormationsCatalogue, AbmUri.FormationsPerfectionnement ]);
-    var actualites = GetMenu([ AbmUri.Actualites ]);
+    var formations = GetMenu([AbmUri.Formations, AbmUri.FormationsCatalogue, AbmUri.FormationsPerfectionnement]);
+    var actualites = GetMenu([AbmUri.Actualites]);
     var headerAbmPaie = GetMenu(
         [
             AbmUri.Abmpaie,
@@ -28,7 +30,7 @@
     var experience = GetMenu(
         [
             AbmUri.Experience,
-            AbmUri.ExperienceCv,
+            AbmUri.Cv,
             AbmUri.ExperienceSilae,
             AbmUri.ExperienceChiffres,
             AbmUri.ExperienceCafel,
@@ -41,11 +43,11 @@
             AbmUri.ContactPagesOfficielles,
         ],
         "filled");
-    var partenariats = GetMenu([ AbmUri.Partenariats, AbmUri.PartenariatsFacilae, ]);
+    var partenariats = GetMenu([AbmUri.Partenariats, AbmUri.Facilae,]);
 
-    var headerMenus = new NavModel[][] { formations, actualites, headerAbmPaie, experience, headerContact, partenariats };
+    var headerMenus = new OperationModel[][] { formations, actualites, headerAbmPaie, experience, headerContact, partenariats };
 
-    var footerAbmPaie = new NavModel[]
+    var footerAbmPaie = new OperationModel[]
     {
             UriProvider.Get(AbmUri.Abmpaie),
             UriProvider.Get(AbmUri.AbmpaieOrganigramme),
@@ -55,30 +57,31 @@
             new(UriProvider.Get(AbmUri.AbmpaieRefAssistance), new(Class: "danger filled")),
             new(UriProvider.Get(AbmUri.AbmpaieRefHandicap), new(Class: "danger filled")),
     };
-    var footerContact = new NavModel[]
+    var footerContact = new OperationModel[]
     {
         UriProvider.Get(AbmUri.Contact),
         new(UriProvider.Get(AbmUri.RendezVous), new(IconPath.CalendarMonth, Class: "danger filled")),
-        new(UriProvider.Get(AbmMailUri.PaieFormation), new(IconPath.Mail)),
+        UriProvider.Get(AbmMail.PaieFormation),
     };
 }
 
-@if (_showBanner) { <ImageTemplate Class="banner" Model=UriProvider.Get(AbmImageUri.Banner) /> }
+@if (_showBanner)
+{
+    <ImageTemplate Class="banner" Model=UriProvider.Get(AbmImage.Banner) />
+}
 
 <NavBar Menus=headerMenus>
-    <NavAction Label=@accueil.Label Location=@accueil.Location IsExternal=accueil.IsExternal>
-        <ImageTemplate Model=@accueil.Image />
-    </NavAction>
+    <Operation Model=accueil />
 </NavBar>
 
 <div id="body">
     @Body
 </div>
 
-<div id="footer">
-    <div>
+<div id="footer" class="wrap">
+    <div class="wrap">
         <div>
-            <DropDownMenu Menu=SetAsFooter([accueil]) />
+            <DropDownMenu Menu=@(SetAsFooter([accueil.ToBase()])) />
             <DropDownMenu Menu=SetAsFooter(formations) />
             <DropDownMenu Menu=SetAsFooter(actualites) />
         </div>
@@ -96,13 +99,11 @@
                 <Paragraph> @* aria-label="contacter ABM Paie par téléphone (appel, sms, WhatsApp)"> *@
                     <Icon Content=IconPath.Call />
                     <Icon Content=IconPath.Sms />
-                    <ImageTemplate Class="inline" Model=UriProvider.Get(AbmImageUri.WhatsAppGlyph) />
+                    <ImageTemplate Class="inline mx-1" Model=UriProvider.Get(AbmImage.WhatsAppGlyph) />
                     +33 7 48 10 65 39
                 </Paragraph>
                 <Paragraph Class="primary">
-                    <NavAction Label=@linkedin.Label Location=@linkedin.Location IsExternal=linkedin.IsExternal Activator=@new(Class: "white filled")>
-                        <ImageTemplate Class="inline" Model=@linkedin.Image />
-                    </NavAction>
+                    <Operation Model=linkedin />
                 </Paragraph>
             </DropDownMenu>
         </div>
@@ -134,9 +135,9 @@
         }
     }
 
-    private NavModel[] GetMenu(IEnumerable<AbmUri> uris, string? titleClass = null)
+    private OperationModel[] GetMenu(IEnumerable<AbmUri> uris, string? titleClass = null)
     {
-        List<NavModel> menus = [];
+        List<OperationModel> menus = [];
 
         if (uris.Any()) menus.Add(new(UriProvider.Get(uris.First()), new(Class: titleClass)));
 
@@ -145,9 +146,9 @@
         return menus.ToArray();
     }
 
-    private NavModel[] SetAsFooter(NavModel[] menu)
+    private OperationModel[] SetAsFooter(OperationModel[] menu)
     {
-        var footerMenu = new List<NavModel>();
+        var footerMenu = new List<OperationModel>();
 
         if (menu.Any())
         {
